# sot-rhp_cop_interface

./: .gitignore  CMakeLists.txt  README.md  manifest.xml
launch/: boxy_tomato_spreading_sot.launch  sot_boxy_test.launch  testboxy_sm_armonly_sot.launch
python/: boxy_startup.py  server.py  tools_v2.py
python/python/: addTransformService.py  map_frames_joints.py  server.py  tools_v2.py
scripts/: simple_sm_action.py  test_boxy_sot.py
src/: CMakeLists.txt  new_operator.cpp
